# LaBr3-Geant4

./: README.md
LaBr3_v3/: CMakeLists.txt  CMakeLists.txt~  LaBr3_v3.cc  README.UPDATES
LaBr3_v3-build/: CMakeCache.txt  LaBr3_613MeV_300kcounts.root  LaBr3_v3  LaBr3_v3.root  Makefile  TestEm0.in  cmake_install.cmake  lyons_run.in  no_int_point.in  run2source.in  unnamed.C  vis.mac  vis.mac~
LaBr3_v3/include/: DetectorConstruction.hh  DetectorConstruction.hh~  DetectorMessenger.hh  DetectorMessenger.hh~  EventAction.hh  EventAction.hh~  HistoManager.hh  HistoManager.hh~  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh  TrackingAction.hh~
LaBr3_v3/src/: #DetectorConstruction.cc#  DetectorConstruction.cc  DetectorConstruction.cc~  DetectorMessenger.cc  DetectorMessenger.cc~  EventAction.cc  EventAction.cc~  HistoManager.cc  HistoManager.cc~  PrimaryGeneratorAction.cc  RunAction.cc  RunAction.cc~  SteppingAction.cc  SteppingAction.cc~  TrackingAction.cc  TrackingAction.cc~
